# logging-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml
example/: example.cpp  example1.cpp  example2.cpp  example3.cpp  exampleLogLevel.cpp  exampleMessageSrc.cpp  exampleMessageSrc2.cpp  examplePointOfIntressed.cpp  main.cpp
include/: advacedConfiguration.h  advancedConfiguration.h  logging.h  loging.h
src/: advacedConfiguration.cpp  advancedConfiguration.cpp  logging.cpp  loging.cpp
